EDA-0: improve docker compose to have multiple brokers and create topics

--- a/v3/services/OrderService/src/main/resources/application.properties
+++ b/v3/services/OrderService/src/main/resources/application.properties
@@ -9,10 +9,10 @@ mp.messaging.outgoing.orders-out.key.serializer=org.apache.kafka.common.serializ
 quarkus.kafka-streams.application-id=order-service-consumer
 quarkus.kafka-streams.topics=Orders,OrdersValidations
 quarkus.kafka-streams.application-server=${hostname:localhost}:${quarkus.http.port}
-quarkus.kafka-streams.bootstrap-servers=${KAFKA_BROKERS:localhost:19092}
+quarkus.kafka-streams.bootstrap-servers=${KAFKA_BROKERS:localhost:19092,localhost:29092,localhost:39092}
 
 # producer options
-kafka.producer.bootstrap.servers=${KAFKA_BROKERS:localhost:19092}
+kafka.producer.bootstrap.servers=${KAFKA_BROKERS:localhost:19092,localhost:29092,localhost:39092}
 kafka.enable.idempotence=true
 #kafka.retries=2147483647
 kafka.acks=all
@@ -30,4 +30,4 @@ kafka-streams.consumer.heartbeat.interval.ms=200
 # This does not work for native tests, manually clean-up /tmp/kafka-streams/temperature-aggregator
 %test.kafka-streams.state.dir=target/data/kafka-data/stores
 
-kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:19092}
+kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:19092,localhost:29092,localhost:39092}
