--- a/v3/services/WarehouseService/src/main/resources/application.properties
+++ b/v3/services/WarehouseService/src/main/resources/application.properties
@@ -5,9 +5,9 @@ quarkus.kafka.devservices.enabled=false
 quarkus.kafka-streams.application-id=warehouse-service
 quarkus.kafka-streams.topics=Orders,OrdersValidations,Shipments,Warehouse
 quarkus.kafka-streams.application-server=${hostname:localhost}:${quarkus.http.port}
-quarkus.kafka-streams.bootstrap-servers=${KAFKA_BROKERS:localhost:19092}
+quarkus.kafka-streams.bootstrap-servers=${KAFKA_BROKERS:localhost:19092,localhost:29092,localhost:39092}
 
-kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:19092}
+kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:19092,localhost:29092,localhost:39092}
 kafka.allow.auto.create.topics = true
 kafka.auto.create.topics.enable = true
 
@@ -29,7 +29,7 @@ mp.messaging.outgoing.warehouse-out.value.serializer=io.quarkus.kafka.client.ser
 mp.messaging.outgoing.warehouse-out.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 
 ## producer options
-kafka.producer.bootstrap.servers=${KAFKA_BROKERS:localhost:19092}
+kafka.producer.bootstrap.servers=${KAFKA_BROKERS:localhost:19092,localhost:29092,localhost:39092}
 kafka.enable.idempotence=true
 #kafka.retries=2147483647
 kafka.acks=all
