--- a/v3/services/TransformerService/src/main/resources/application.properties
+++ b/v3/services/TransformerService/src/main/resources/application.properties
@@ -5,9 +5,9 @@ quarkus.kafka.devservices.enabled=false
 quarkus.kafka-streams.application-id=transformer-service
 quarkus.kafka-streams.topics=postgres.public.users_outbox_events
 quarkus.kafka-streams.application-server=${hostname:localhost}:${quarkus.http.port}
-quarkus.kafka-streams.bootstrap-servers=${KAFKA_BROKERS:localhost:19092}
+quarkus.kafka-streams.bootstrap-servers=${KAFKA_BROKERS:localhost:19092,localhost:29092,localhost:39092}
 
-kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:19092}
+kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:19092,localhost:29092,localhost:39092}
 
 # streams options
 kafka-streams.processing.guarantee=exactly_once
