EDA-193: when producer sends msg add acks=all

--- a/v1/services/PaymentService/src/main/resources/application.properties
+++ b/v1/services/PaymentService/src/main/resources/application.properties
@@ -6,6 +6,7 @@ mp.messaging.outgoing.payments-out.connector=smallrye-kafka
 mp.messaging.outgoing.payments-out.topic=Payments
 mp.messaging.outgoing.payments-out.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
 mp.messaging.outgoing.payments-out.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.payments-out.acks=all
 
 mp.messaging.incoming.orders-in.connector=smallrye-kafka
 mp.messaging.incoming.orders-in.topic=Orders
