--- a/v1/services/OrderService/src/main/resources/application.properties
+++ b/v1/services/OrderService/src/main/resources/application.properties
@@ -7,6 +7,7 @@ mp.messaging.outgoing.orders-out.topic=Orders
 mp.messaging.outgoing.orders-out.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
 mp.messaging.outgoing.orders-out.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.orders-out.merge=true
+mp.messaging.outgoing.orders-out.acks=all
 
 mp.messaging.incoming.shipments-in.connector=smallrye-kafka
 mp.messaging.incoming.shipments-in.topic=Shipments
