--- a/v1/services/UserService/src/main/resources/application.properties
+++ b/v1/services/UserService/src/main/resources/application.properties
@@ -6,13 +6,15 @@ quarkus.datasource.password=${POSTGRES_PASSWORD:secret}
 quarkus.datasource.db-kind=postgresql
 quarkus.hibernate-orm.jdbc.timezone=UTC
 quarkus.hibernate-orm.log.sql=true
-#quarkus.hibernate-orm.sql-load-script=import-dev.sql
-#quarkus.hibernate-orm.database.generation=none
+
+## Kafka
 quarkus.kafka.devservices.enabled=false
 mp.messaging.outgoing.users-out.connector=smallrye-kafka
 mp.messaging.outgoing.users-out.topic=Users
 mp.messaging.outgoing.users-out.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
 mp.messaging.outgoing.users-out.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.users-out.acks=all
+
 kafka.producer.bootstrap.servers=${KAFKA_BROKERS:localhost:9092,localhost:19092,localhost:29092}
 kafka.enable.idempotence=true
 #kafka.retries=2147483647
@@ -22,6 +24,7 @@ kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:9092,localhost:19092,localhost
 kafka.allow.auto.create.topics=true
 kafka.auto.create.topics.enable=true
 %prod.kafka.security.protocol=SSL
+
 ## Database Migrations
 quarkus.flyway.migrate-at-start=true
 #%test.quarkus.flyway.migrate-at-start=false
