--- a/v1/services/WarehouseService/src/main/resources/application.properties
+++ b/v1/services/WarehouseService/src/main/resources/application.properties
@@ -6,12 +6,14 @@ mp.messaging.outgoing.order-validation-out.connector=smallrye-kafka
 mp.messaging.outgoing.order-validation-out.topic=OrdersValidations
 mp.messaging.outgoing.order-validation-out.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
 mp.messaging.outgoing.order-validation-out.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.order-validation-out.acks=all
 
 mp.messaging.outgoing.shipment-out.connector=smallrye-kafka
 mp.messaging.outgoing.shipment-out.topic=Shipments
 mp.messaging.outgoing.shipment-out.merge=true
 mp.messaging.outgoing.shipment-out.value.serializer=io.quarkus.kafka.client.serialization.ObjectMapperSerializer
 mp.messaging.outgoing.shipment-out.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.shipment-out.acks=all
 
 mp.messaging.incoming.order-in.connector=smallrye-kafka
 mp.messaging.incoming.order-in.topic=Orders
