EDA-194: added proceed_events table to reduce duplications

--- a/v1/services/OrderService/src/main/resources/application.properties
+++ b/v1/services/OrderService/src/main/resources/application.properties
@@ -11,17 +11,17 @@ mp.messaging.outgoing.orders-out.acks=all
 
 mp.messaging.incoming.shipments-in.connector=smallrye-kafka
 mp.messaging.incoming.shipments-in.topic=Shipments
-mp.messaging.incoming.shipments-in.value.deserializer=com.arconsis.domain.shipments.ShipmentDeserializer
+mp.messaging.incoming.shipments-in.value.deserializer=com.arconsis.domain.shipments.ShipmentMessageDeserializer
 mp.messaging.incoming.shipments-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 mp.messaging.incoming.order-validation-in.connector=smallrye-kafka
 mp.messaging.incoming.order-validation-in.topic=OrdersValidations
-mp.messaging.incoming.order-validation-in.value.deserializer=com.arconsis.domain.ordersvalidations.OrderValidationDeserializer
+mp.messaging.incoming.order-validation-in.value.deserializer=com.arconsis.domain.ordersvalidations.OrderValidationMessageDeserializer
 mp.messaging.incoming.order-validation-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 mp.messaging.incoming.payments-in.connector=smallrye-kafka
 mp.messaging.incoming.payments-in.topic=Payments
-mp.messaging.incoming.payments-in.value.deserializer=com.arconsis.domain.payments.PaymentDeserializer
+mp.messaging.incoming.payments-in.value.deserializer=com.arconsis.domain.payments.PaymentMessageDeserializer
 mp.messaging.incoming.payments-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 ## producer options
