--- a/v1/services/PaymentService/src/main/resources/application.properties
+++ b/v1/services/PaymentService/src/main/resources/application.properties
@@ -10,7 +10,7 @@ mp.messaging.outgoing.payments-out.acks=all
 
 mp.messaging.incoming.orders-in.connector=smallrye-kafka
 mp.messaging.incoming.orders-in.topic=Orders
-mp.messaging.incoming.orders-in.value.deserializer=com.arconsis.domain.orders.OrdersDeserializer
+mp.messaging.incoming.orders-in.value.deserializer=com.arconsis.domain.orders.OrderMessageDeserializer
 mp.messaging.incoming.orders-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 ## producer options
