--- a/v1/services/WarehouseService/src/main/resources/application.properties
+++ b/v1/services/WarehouseService/src/main/resources/application.properties
@@ -17,7 +17,7 @@ mp.messaging.outgoing.shipment-out.acks=all
 
 mp.messaging.incoming.order-in.connector=smallrye-kafka
 mp.messaging.incoming.order-in.topic=Orders
-mp.messaging.incoming.order-in.value.deserializer=com.arconsis.domain.orders.OrdersDeserializer
+mp.messaging.incoming.order-in.value.deserializer=com.arconsis.domain.orders.OrderMessageDeserializer
 mp.messaging.incoming.order-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 ## producer options
