--- a/v1/services/EmailService/src/main/resources/application.properties
+++ b/v1/services/EmailService/src/main/resources/application.properties
@@ -5,7 +5,7 @@ quarkus.kafka.devservices.enabled=false
 # Orders Topic
 mp.messaging.incoming.orders-in.connector=smallrye-kafka
 mp.messaging.incoming.orders-in.topic=Orders
-mp.messaging.incoming.orders-in.value.deserializer=com.arconsis.domain.orders.OrdersDeserializer
+mp.messaging.incoming.orders-in.value.deserializer=com.arconsis.domain.orders.OrderMessageDeserializer
 mp.messaging.incoming.orders-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:9092,localhost:19092,localhost:29092}
