--- a/Bastion/.env
+++ b/Bastion/.env
@@ -1,4 +1,5 @@
 DEBEZIUM_HOST=http://localhost:8083/connectors
 DATABASE_URL=postgres://postgres:secret@localhost:5432/postgres
+BOOTSTRAP_SERVERS: localhost:9092,localhost:19092,localhost:29092
 APP_ENV=development
 PORT=3000
