EDA-186: Adapt Bastion Dockerfile to support confluent-kafka-go

--- a/Bastion/Dockerfile
+++ b/Bastion/Dockerfile
@@ -1,7 +1,10 @@
 FROM golang:alpine AS builder
 
+# gcc needed for CGO
+RUN apk add build-base
+
 ENV GO111MODULE=on \
-    CGO_ENABLED=0 \
+    CGO_ENABLED=1 \
     GOOS=linux \
     GOARCH=amd64
 
@@ -14,13 +17,16 @@ RUN go mod download
 
 COPY . .
 
-RUN go build -o main .
+# confluent-kafka-go needs musl when building on Alpine
+RUN go build -tags musl -o main .
 
 WORKDIR /dist
 
 RUN cp /build/main .
 
-FROM scratch
+# scratch cannot be used because of cgo
+#FROM scratch
+FROM alpine:latest
 
 COPY --from=builder /dist/main /
 
