--- a/v2/services/docker-compose.yml
+++ b/v2/services/docker-compose.yml
@@ -108,6 +108,7 @@ services:
       BOOTSTRAP_SERVERS: kafka1:39092,kafka2:49092,kafka3:59092
       APP_ENV: production
       PORT: 3000
+      SECURITY_PROTOCOL: PLAINTEXT
     restart: always
 
 volumes:
