--- a/Bastion/.env.temp
+++ b/Bastion/.env.temp
@@ -3,3 +3,4 @@ DATABASE_URL=postgres://postgres:secret@localhost:5432/postgres
 BOOTSTRAP_SERVERS: localhost:9092,localhost:19092,localhost:29092
 APP_ENV=development
 PORT=3000
+SECURITY_PROTOCOL=PLAINTEXT
