--- a/v1/services/EmailService/src/main/resources/application.properties
+++ b/v1/services/EmailService/src/main/resources/application.properties
@@ -9,8 +9,8 @@ mp.messaging.incoming.orders-in.value.deserializer=com.arconsis.domain.orders.Or
 mp.messaging.incoming.orders-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:9092,localhost:19092,localhost:29092}
-kafka.allow.auto.create.topics = true
-kafka.auto.create.topics.enable = true
+kafka.allow.auto.create.topics = false
+kafka.auto.create.topics.enable = false
 %prod.kafka.security.protocol = SSL
 
 # mailgun
