--- a/v1/services/UserService/src/main/resources/application.properties
+++ b/v1/services/UserService/src/main/resources/application.properties
@@ -21,8 +21,8 @@ kafka.enable.idempotence=true
 kafka.acks=all
 kafka.client.id=users-service-producer
 kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:9092,localhost:19092,localhost:29092}
-kafka.allow.auto.create.topics=true
-kafka.auto.create.topics.enable=true
+kafka.allow.auto.create.topics=false
+kafka.auto.create.topics.enable=false
 %prod.kafka.security.protocol=SSL
 
 ## Database Migrations
