--- a/v1/services/WarehouseService/src/main/resources/application.properties
+++ b/v1/services/WarehouseService/src/main/resources/application.properties
@@ -28,8 +28,8 @@ kafka.acks=all
 kafka.client.id=warehouse-service-producer
 
 kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:9092,localhost:19092,localhost:29092}
-kafka.allow.auto.create.topics = true
-kafka.auto.create.topics.enable = true
+kafka.allow.auto.create.topics = false
+kafka.auto.create.topics.enable = false
 %prod.kafka.security.protocol = SSL
 
 ## Database
