--- a/v3/kubernetes/Bastion/deployment.yaml
+++ b/v3/kubernetes/Bastion/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
         - name: bastion-eda
           imagePullPolicy: Always
-          image: eldimious/bastion-eda-v3:latest
+          image: eldimious/bastion-eda:latest
           ports:
             - containerPort: 3000
               protocol: TCP
@@ -55,3 +55,10 @@ spec:
                 secretKeyRef:
                   name: eda-secrets
                   key: POSTGRES_USER
+            - name: BOOTSTRAP_SERVERS
+              valueFrom:
+                configMapKeyRef:
+                  name: eda-configmap
+                  key: KAFKA_BROKERS
+            - name: SECURITY_PROTOCOL
+              value: "SSL"
