--- a/v3/services/docker-compose.yaml
+++ b/v3/services/docker-compose.yaml
@@ -108,6 +108,7 @@ services:
       PORT: 3000
       BOOTSTRAP_SERVERS: kafka1:39092,kafka2:49092,kafka3:59092
       DATABASE_URL: postgres://postgres:secret@postgres:5432/postgres
+      SECURITY_PROTOCOL: PLAINTEXT
     restart: always
 
 volumes:
