EDA-186: improve docker-compose files

--- a/v2/services/EmailService/src/main/resources/application.properties
+++ b/v2/services/EmailService/src/main/resources/application.properties
@@ -16,6 +16,8 @@ mp.messaging.incoming.users-in.value.deserializer=com.arconsis.presentation.even
 mp.messaging.incoming.users-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:19092,localhost:29092,localhost:39092}
+kafka.allow.auto.create.topics = false
+kafka.auto.create.topics.enable = false
 
 # mailgun
 mailgun/mp-rest/url=https://api.mailgun.net/v3/${QUARKUS_MAILGUN_DOMAIN_NAME}
