--- a/v2/services/OrderService/src/main/resources/application.properties
+++ b/v2/services/OrderService/src/main/resources/application.properties
@@ -21,6 +21,8 @@ kafka.acks=all
 kafka.client.id=order-service-producer
 
 kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:19092,localhost:29092,localhost:39092}
+kafka.allow.auto.create.topics = false
+kafka.auto.create.topics.enable = false
 %prod.kafka.security.protocol = SSL
 
 ## Database
