--- a/v2/services/docker-compose.yml
+++ b/v2/services/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
       KAFKA_LISTENERS: INSIDE://:39092,OUTSIDE://:9092
       KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka1:39092,OUTSIDE://localhost:9092
-      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'false'
       KAFKA_DELETE_TOPIC_ENABLE: 'true'
       KAFKA_UNCLEAN_LEADER_ELECTION_ENABLE: 'false'
 
@@ -39,7 +39,7 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
       KAFKA_LISTENERS: INSIDE://:49092,OUTSIDE://:19092
       KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka2:49092,OUTSIDE://localhost:19092
-      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'false'
       KAFKA_DELETE_TOPIC_ENABLE: 'true'
       KAFKA_UNCLEAN_LEADER_ELECTION_ENABLE: 'false'
 
@@ -57,7 +57,7 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
       KAFKA_LISTENERS: INSIDE://:59092,OUTSIDE://:29092
       KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka3:59092,OUTSIDE://localhost:29092
-      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'false'
       KAFKA_DELETE_TOPIC_ENABLE: 'true'
       KAFKA_UNCLEAN_LEADER_ELECTION_ENABLE: 'false'
 
