--- a/v3/services/OrderService/src/main/resources/application.properties
+++ b/v3/services/OrderService/src/main/resources/application.properties
@@ -10,7 +10,8 @@ quarkus.kafka-streams.application-id=order-service-consumer
 quarkus.kafka-streams.topics=Orders,OrdersValidations
 quarkus.kafka-streams.application-server=${hostname:localhost}:${quarkus.http.port}
 quarkus.kafka-streams.bootstrap-servers=${KAFKA_BROKERS:localhost:19092,localhost:29092,localhost:39092}
-
+kafka.allow.auto.create.topics = false
+kafka.auto.create.topics.enable = false
 # producer options
 kafka.producer.bootstrap.servers=${KAFKA_BROKERS:localhost:19092,localhost:29092,localhost:39092}
 kafka.enable.idempotence=true
