--- a/v3/services/PaymentService/src/main/resources/application.properties
+++ b/v3/services/PaymentService/src/main/resources/application.properties
@@ -8,6 +8,8 @@ quarkus.kafka-streams.application-server=${hostname:localhost}:${quarkus.http.po
 quarkus.kafka-streams.bootstrap-servers=${KAFKA_BROKERS:localhost:19092,localhost:29092,localhost:39092}
 
 kafka.bootstrap.servers=${KAFKA_BROKERS:localhost:19092,localhost:29092,localhost:39092}
+kafka.allow.auto.create.topics = false
+kafka.auto.create.topics.enable = false
 
 # streams options
 kafka-streams.processing.guarantee=exactly_once
