--- a/v2/kubernetes/Debezium/deployment.yaml
+++ b/v2/kubernetes/Debezium/deployment.yaml
@@ -55,3 +55,9 @@ spec:
                 configMapKeyRef:
                   name: eda-configmap
                   key: STATUS_STORAGE_TOPIC
+            - name: CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR
+              value: "3"
+            - name: CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR
+              value: "3"
+            - name: CONNECT_STATUS_STORAGE_REPLICATION_FACTOR
+              value: "3"
