EDA-186: update postman V2 to include correct debezium topics

--- a/v2/services/EmailService/src/main/resources/application.properties
+++ b/v2/services/EmailService/src/main/resources/application.properties
@@ -5,13 +5,13 @@ quarkus.kafka.devservices.enabled=false
 
 # Orders Topic
 mp.messaging.incoming.orders-in.connector=smallrye-kafka
-mp.messaging.incoming.orders-in.topic=postgres.public.orders_outbox_events
+mp.messaging.incoming.orders-in.topic=orders-db.public.orders_outbox_events
 mp.messaging.incoming.orders-in.value.deserializer=com.arconsis.presentation.events.orders.OrderEventsDtoDeserializer
 mp.messaging.incoming.orders-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 # Users Topic
 mp.messaging.incoming.users-in.connector=smallrye-kafka
-mp.messaging.incoming.users-in.topic=postgres.public.users_outbox_events
+mp.messaging.incoming.users-in.topic=users-db.public.users_outbox_events
 mp.messaging.incoming.users-in.value.deserializer=com.arconsis.presentation.events.users.UserEventsDtoDeserializer
 mp.messaging.incoming.users-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
