--- a/v2/services/WarehouseService/src/main/resources/application.properties
+++ b/v2/services/WarehouseService/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 quarkus.kafka.devservices.enabled=false
 
 mp.messaging.incoming.order-in.connector=smallrye-kafka
-mp.messaging.incoming.order-in.topic=postgres.public.orders_outbox_events
+mp.messaging.incoming.order-in.topic=orders-db.public.orders_outbox_events
 mp.messaging.incoming.order-in.value.deserializer=com.arconsis.presentation.events.orders.OrderEventsDtoDeserializer
 mp.messaging.incoming.order-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
