--- a/v2/services/OrderService/src/main/resources/application.properties
+++ b/v2/services/OrderService/src/main/resources/application.properties
@@ -3,13 +3,13 @@
 quarkus.kafka.devservices.enabled=false
 
 mp.messaging.incoming.warehouse-in.connector=smallrye-kafka
-mp.messaging.incoming.warehouse-in.topic=postgres.public.warehouse_outbox_events
+mp.messaging.incoming.warehouse-in.topic=warehouse-db.public.warehouse_outbox_events
 mp.messaging.incoming.warehouse-in.value.deserializer=com.arconsis.presentation.events.common.WarehouseEventsDtoDeserializer
 mp.messaging.incoming.warehouse-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.warehouse-in.broadcast=true
 
 mp.messaging.incoming.payments-in.connector=smallrye-kafka
-mp.messaging.incoming.payments-in.topic=postgres.public.payments_outbox_events
+mp.messaging.incoming.payments-in.topic=payments-db.public.payments_outbox_events
 mp.messaging.incoming.payments-in.value.deserializer=com.arconsis.presentation.events.payments.PaymentEventsDtoDeserializer
 mp.messaging.incoming.payments-in.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
