EDA-186: update postman V3 to include correct debezium topics

--- a/v3/services/TransformerService/src/main/resources/application.properties
+++ b/v3/services/TransformerService/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 %prod.kafka.security.protocol = SSL
 quarkus.kafka.devservices.enabled=false
 quarkus.kafka-streams.application-id=transformer-service
-quarkus.kafka-streams.topics=postgres.public.users_outbox_events
+quarkus.kafka-streams.topics=users-db.public.users_outbox_events
 quarkus.kafka-streams.application-server=${hostname:localhost}:${quarkus.http.port}
 quarkus.kafka-streams.bootstrap-servers=${KAFKA_BROKERS:localhost:19092,localhost:29092,localhost:39092}
 
